make lint-imports

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -59,7 +59,7 @@ jobs:
         run: |
           make lint-api
   lint-imports:
-    name: lint
+    name: lint-imports
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
