Summarize test results

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -263,6 +263,16 @@ jobs:
           TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
           TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
 
+      - name: Generate test summary
+        uses: mikepenz/action-junit-report@v5.0.0-rc01
+        if: failure()
+        with:
+          report_paths: ./.testoutput/*.junit.xml
+          detailed_summary: true
+          check_annotations: false
+          annotate_only: true
+          skip_annotations: true
+
       - name: Upload test results
         # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
         uses: actions/upload-artifact@v4.4.3
@@ -331,6 +341,16 @@ jobs:
       - name: Run integration test
         timeout-minutes: 15
         run: make integration-test-coverage
+
+      - name: Generate test summary
+        uses: mikepenz/action-junit-report@v5.0.0-rc01
+        if: failure()
+        with:
+          report_paths: ./.testoutput/*.junit.xml
+          detailed_summary: true
+          check_annotations: false
+          annotate_only: true
+          skip_annotations: true
 
       - name: Upload test results
         # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
@@ -455,6 +475,16 @@ jobs:
         env:
           TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
 
+      - name: Generate test summary
+        uses: mikepenz/action-junit-report@v5.0.0-rc01
+        if: failure()
+        with:
+          report_paths: ./.testoutput/*.junit.xml
+          detailed_summary: true
+          check_annotations: false
+          annotate_only: true
+          skip_annotations: true
+
       - name: Upload test results
         # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
         uses: actions/upload-artifact@v4.4.3
@@ -551,6 +581,16 @@ jobs:
       - name: Run functional test xdc
         timeout-minutes: 25   # update this to TEST_TIMEOUT+5 if you update the Makefile
         run: make functional-test-xdc-coverage
+
+      - name: Generate test summary
+        uses: mikepenz/action-junit-report@v5.0.0-rc01
+        if: failure()
+        with:
+          report_paths: ./.testoutput/*.junit.xml
+          detailed_summary: true
+          check_annotations: false
+          annotate_only: true
+          skip_annotations: true
 
       - name: Upload test results
         # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
