Add Temporal prefix

--- a/schema/mysql/v8/visibility/versioned/v1.7/manifest.json
+++ b/schema/mysql/v8/visibility/versioned/v1.7/manifest.json
@@ -1,7 +1,7 @@
 {
   "CurrVersion": "1.7",
   "MinCompatibleVersion": "0.1",
-  "Description": "add PausedInfo column",
+  "Description": "add TemporalPausedInfo column",
   "SchemaUpdateCqlFiles": [
     "add_paused_info_info_attribute.sql"
   ]
