--- a/schema/postgresql/v12/visibility/versioned/v1.7/manifest.json
+++ b/schema/postgresql/v12/visibility/versioned/v1.7/manifest.json
@@ -1,7 +1,7 @@
 {
-  "CurrVersion": "1.8",
+  "CurrVersion": "1.7",
   "MinCompatibleVersion": "0.1",
-  "Description": "add PausedInfo column",
+  "Description": "add TemporalPauseInfo column",
   "SchemaUpdateCqlFiles": [
     "add_pause_info_search_attribute.sql"
   ]
