--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -76,6 +76,13 @@
 				"start",
 			]
 		},
+        {
+            "name": "Debug Running Server",
+            "type": "go",
+            "request": "attach",
+            "mode": "local",
+            "cwd": "${workspaceFolder}",
+        },
 	],
 	"inputs": [
 		{
