--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -446,8 +446,8 @@ jobs:
 
       - name: Get Job ID from GH API
         id: get-job-id
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           jobs=$(gh api repos/${{ github.repository }}/actions/runs/${{ github.run_id}}/attempts/${{ github.run_attempt }}/jobs)
           job_id=$(echo $jobs | jq -r '.jobs[] | select(.runner_name=="${{ runner.name }}") | .id')
