--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -495,7 +495,7 @@ jobs:
         run: |
             set -e
             job_id="$(GITHUB_TOKEN="${{ secrets.GITHUB_TOKEN }}" ./develop/github/get-job-id-for-job-name "${{matrix.name}}")"
-            echo "JOB_ID=${job_id}" >> $GITHUB_OUTPUT          
+            echo "JOB_ID="${job_id}"" >> $GITHUB_OUTPUT          
 
       - name: Upload test results
         # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
