another attempt - remove  quotes

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -492,12 +492,12 @@ jobs:
         id: get_job_id
         run: |
           set -e          
-          job_id="$(curl -L \
+          job_id=$(curl -L \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer "${{secrets.GITHUB_TOKEN}}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/"${GITHUB_REPOSITORY}"/actions/runs/"${GITHUB_RUN_ID}"/jobs \
-            | jq "first(.jobs[] | select(.name | endswith(\"$job_name\")) | .id)" )"
+            | jq "first(.jobs[] | select(.name | endswith(\"$job_name\")) | .id)")
           echo "JOB_ID="${job_id}"" >> $GITHUB_OUTPUT
 
       - name: Upload test results
