--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -498,7 +498,7 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/"${GITHUB_REPOSITORY}"/actions/runs/"${GITHUB_RUN_ID}"/jobs \
             | jq "first(.jobs[] | select(.name | endswith(\"$job_name\")) | .id)")
-          echo "JOB_ID="${job_id}"" >> $GITHUB_OUTPUT
+          echo "JOB_ID=${job_id}" >> $GITHUB_OUTPUT
 
       - name: Upload test results
         # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
