--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -496,7 +496,7 @@ jobs:
             -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             "https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs" \
-            | jq "first(.jobs[] | select(.name | endswith(\"$job_name\")) | .id)")
+            | jq "first(.jobs[] | select(.name | endswith(\"${{matrix.name}}\")) | .id)")
           echo "JOB_ID=${job_id}" >> "$GITHUB_OUTPUT"
 
       - name: Upload test results
@@ -615,7 +615,7 @@ jobs:
             -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             "https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs" \
-            | jq "first(.jobs[] | select(.name | endswith(\"$job_name\")) | .id)")
+            | jq "first(.jobs[] | select(.name | endswith(\"${{matrix.name}}\")) | .id)")
           echo "JOB_ID=${job_id}" >> "$GITHUB_OUTPUT"
 
       - name: Upload test results
@@ -725,7 +725,7 @@ jobs:
             -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             "https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs" \
-            | jq "first(.jobs[] | select(.name | endswith(\"$job_name\")) | .id)")
+            | jq "first(.jobs[] | select(.name | endswith(\"${{matrix.name}}\")) | .id)")
           echo "JOB_ID=${job_id}" >> "$GITHUB_OUTPUT"
 
       - name: Upload test results
