--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -490,6 +490,8 @@ jobs:
       - name: Get job name
         run: |
           echo "Job name is $GITHUB_JOB"
+          echo "Matrix name is ${{matrix.name}}"
+          echo "Jithub.job name is ${{jithub.job}}"
 
       - name: Get job ID from workflow run
         id: get_job_id
