--- a/develop/docker-compose/docker-compose.cdc.yml
+++ b/develop/docker-compose/docker-compose.cdc.yml
@@ -3,12 +3,12 @@
 # docker-compose -f docker-compose.yml -f docker-compose.linux.yml -f docker-compose.cdc.yml -f docker-compose.cdc.linux.yml up
 services:
   temporal-ui-standby:
-    image: temporalio/ui:2.21.3
+    image: temporalio/ui:latest
     container_name: temporal-dev-ui-standby
     environment:
       - TEMPORAL_UI_PORT=8081
   temporal-ui-other:
-    image: temporalio/ui:2.21.3
+    image: temporalio/ui:latest
     container_name: temporal-dev-ui-other
     environment:
       - TEMPORAL_UI_PORT=8082
