--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -475,20 +475,25 @@ jobs:
           echo "Job name is $GITHUB_JOB"
           echo "Matrix name is ${{matrix.name}}"
           echo "Github.job name is ${{github.job}}"
-          job_suffix="${{matrix.runs-on}}, ${{matrix.shard_index}}, ${{matrix.name}}"
-          echo "Job suffix is $job_suffix"
+          job_suffix="(${{matrix.runs-on}}, ${{matrix.shard_index}}, ${{matrix.name}})"
+          func_test_job_name="Functional test ($job_suffix)"
+          echo "Tst job name is $func_test_job_name"
+          echo "JOB_NAME=${func_test_job_name}" >> "$GITHUB_OUTPUT"
 
       - name: Get job ID from workflow run
         id: get_job_id
         run: |
           set -eu
           job_suffix="${{matrix.runs-on}}, ${{matrix.shard_index}}, ${{matrix.name}}"
+          job_url="https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs"
+          echo "Job url is $job_url"
           job_id=$(curl -L \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs" \
-            | jq "first(.jobs[] | select(.name | endswith(\"$job_suffix\")) | .id)")
+             $job_url \
+            | jq "first(.jobs[] | select(.name == \"$JOB_NAME\")) | .id)")
+          echo "Job id is $job_id"
           echo "JOB_ID=${job_id}" >> "$GITHUB_OUTPUT"
 
       - name: Run functional test
