--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -476,9 +476,9 @@ jobs:
           echo "Matrix name is ${{matrix.name}}"
           echo "Github.job name is ${{github.job}}"
           job_suffix="(${{matrix.runs-on}}, ${{matrix.shard_index}}, ${{matrix.name}})"
-          func_test_job_name="Functional test ($job_suffix)"
-          echo "Tst job name is $func_test_job_name"
-          echo "JOB_NAME=${func_test_job_name}" >> "$GITHUB_OUTPUT"
+          func_test_job_name="Functional test $job_suffix"
+          echo "Test job name is $func_test_job_name"
+          echo "TEST_JOB_NAME=${func_test_job_name}" >> "$GITHUB_OUTPUT"
 
       - name: Get job ID from workflow run
         id: get_job_id
@@ -490,8 +490,8 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-             $job_url \
-            | jq "first(.jobs[] | select(.name == \"$JOB_NAME\")) | .id)")
+             "$job_url" \
+            | jq "first(.jobs[] | select(.name == \"$TEST_JOB_NAME\")) | .id)")
           echo "Job id is $job_id"
           echo "JOB_ID=${job_id}" >> "$GITHUB_OUTPUT"
 
