--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -492,7 +492,7 @@ jobs:
             -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
              "$job_url" \
-            | jq "first(.jobs[] | select(.name == \"${{steps.get_job_name.outputs.TEST_JOB_NAME}}\")) | .id)")
+            | jq "first(.jobs[] | select(.name == \"${{steps.get_job_name.outputs.TEST_JOB_NAME}}\") | .id)")
           echo "Job id is $job_id"
           echo "JOB_ID=${job_id}" >> "$GITHUB_OUTPUT"
 
