--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -470,29 +470,20 @@ jobs:
           path: ~/.cache/go-build
           key: go-${{ runner.os }}${{ runner.arch }}-build-${{ env.COMMIT }}
 
-      - name: Get job name
-        id: get_job_name
-        run: |
-          echo "Job name is $GITHUB_JOB"
-          echo "Matrix name is ${{matrix.name}}"
-          echo "Github.job name is ${{github.job}}"
-          job_suffix="(${{matrix.runs-on}}, ${{matrix.shard_index}}, ${{matrix.name}})"
-          func_test_job_name="Functional test $job_suffix"
-          echo "Test job name is $func_test_job_name"
-          echo "TEST_JOB_NAME=${func_test_job_name}" >> "$GITHUB_OUTPUT"
-
       - name: Get job ID from workflow run
         id: get_job_id
         run: |
           set -eu
+          test_job_name="Functional test (${{matrix.runs-on}}, ${{matrix.shard_index}}, ${{matrix.name}})"
           job_url="https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs"
+          echo "Test job name is $test_job_name"
           echo "Job url is $job_url"
           job_id=$(curl -L \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
              "$job_url" \
-            | jq "first(.jobs[] | select(.name == \"${{steps.get_job_name.outputs.TEST_JOB_NAME}}\") | .id)")
+            | jq "first(.jobs[] | select(.name == \"$test_job_name\") | .id)")
           echo "Job id is $job_id"
           echo "JOB_ID=${job_id}" >> "$GITHUB_OUTPUT"
 
@@ -606,6 +597,23 @@ jobs:
           path: ~/.cache/go-build
           key: go-${{ runner.os }}${{ runner.arch }}-build-${{ env.COMMIT }}
 
+      - name: Get job ID from workflow run
+        id: get_job_id
+        run: |
+          set -eu
+          test_job_name="Functional test xdc (${{matrix.name}})"
+          job_url="https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs"
+          echo "Test job name is $test_job_name"
+          echo "Job url is $job_url"
+          job_id=$(curl -L \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+             "$job_url" \
+            | jq "first(.jobs[] | select(.name == \"$test_job_name\") | .id)")
+          echo "Job id is $job_id"
+          echo "JOB_ID=${job_id}" >> "$GITHUB_OUTPUT"
+
       - name: Run functional test xdc
         timeout-minutes: 25   # update this to TEST_TIMEOUT+5 if you update the Makefile
         run: make functional-test-xdc-coverage
@@ -619,18 +627,6 @@ jobs:
           check_annotations: false
           annotate_only: true
           skip_annotations: true
-
-      - name: Get job ID from workflow run
-        id: get_job_id
-        run: |
-          set -eu
-          job_id=$(curl -L \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs" \
-            | jq "first(.jobs[] | select(.name | endswith(\"${{matrix.name}}\")) | .id)")
-          echo "JOB_ID=${job_id}" >> "$GITHUB_OUTPUT"
 
       - name: Upload test results
         # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
@@ -726,21 +722,26 @@ jobs:
           path: ~/.cache/go-build
           key: go-${{ runner.os }}${{ runner.arch }}-build-${{ env.COMMIT }}
 
-      - name: Run functional test ndc
-        timeout-minutes: 15
-        run: make functional-test-ndc-coverage
-
       - name: Get job ID from workflow run
         id: get_job_id
         run: |
           set -eu
+          test_job_name="Functional test ndc (${{matrix.name}})"
+          job_url="https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs"
+          echo "Test job name is $test_job_name"
+          echo "Job url is $job_url"
           job_id=$(curl -L \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs" \
-            | jq "first(.jobs[] | select(.name | endswith(\"${{matrix.name}}\")) | .id)")
+             "$job_url" \
+            | jq "first(.jobs[] | select(.name == \"$test_job_name\") | .id)")
+          echo "Job id is $job_id"
           echo "JOB_ID=${job_id}" >> "$GITHUB_OUTPUT"
+
+      - name: Run functional test ndc
+        timeout-minutes: 15
+        run: make functional-test-ndc-coverage
 
       - name: Upload test results
         # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
