--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -600,7 +600,7 @@ jobs:
       - name: Get job ID from workflow run
         id: get_job_id
         run: |
-          set -eu
+          set -euo pipefail
           test_job_name="Functional test xdc (${{matrix.name}})"
           job_url="https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs"
           echo "Test job name is $test_job_name"
