--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -470,6 +470,23 @@ jobs:
           path: ~/.cache/go-build
           key: go-${{ runner.os }}${{ runner.arch }}-build-${{ env.COMMIT }}
 
+      - name: Get job ID from workflow run
+        id: get_job_id
+        run: |
+          set -eu
+          test_job_name="Functional test (${{matrix.runs-on}}, ${{matrix.shard_index}}, ${{matrix.name}})"
+          job_url="https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs"
+          echo "Test job name is $test_job_name"
+          echo "Job url is $job_url"
+          job_id=$(curl -L \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+             "$job_url" \
+            | jq "first(.jobs[] | select(.name == \"$test_job_name\") | .id)")
+          echo "Job id is $job_id"
+          echo "JOB_ID=${job_id}" >> "$GITHUB_OUTPUT"
+
       - name: Run functional test
         if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
@@ -492,7 +509,7 @@ jobs:
         uses: actions/upload-artifact@v4.4.3
         if: ${{ !cancelled() && !inputs.run_single_functional_test }}
         with:
-          name: junit-xml--${{github.run_id}}--${{github.run_attempt}}--${{matrix.runs-on}}--${{matrix.name}}--${{matrix.shard_index}}--functional-test
+          name: junit-xml--${{github.run_id}}--${{steps.get_job_id.outputs.JOB_ID}}--${{github.run_attempt}}--${{matrix.runs-on}}--${{matrix.name}}--${{matrix.shard_index}}--functional-test
           path: .testoutput
           include-hidden-files: true
           retention-days: 28
@@ -580,6 +597,23 @@ jobs:
           path: ~/.cache/go-build
           key: go-${{ runner.os }}${{ runner.arch }}-build-${{ env.COMMIT }}
 
+      - name: Get job ID from workflow run
+        id: get_job_id
+        run: |
+          set -euo pipefail
+          test_job_name="Functional test xdc (${{matrix.name}})"
+          job_url="https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs"
+          echo "Test job name is $test_job_name"
+          echo "Job url is $job_url"
+          job_id=$(curl -L \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+             "$job_url" \
+            | jq "first(.jobs[] | select(.name == \"$test_job_name\") | .id)")
+          echo "Job id is $job_id"
+          echo "JOB_ID=${job_id}" >> "$GITHUB_OUTPUT"
+
       - name: Run functional test xdc
         timeout-minutes: 25   # update this to TEST_TIMEOUT+5 if you update the Makefile
         run: make functional-test-xdc-coverage
@@ -599,7 +633,7 @@ jobs:
         uses: actions/upload-artifact@v4.4.3
         if: ${{ !cancelled() }}
         with:
-          name: junit-xml--${{github.run_id}}--${{github.run_attempt}}--${{matrix.name}}--functional-test-xdc
+          name: junit-xml--${{github.run_id}}--${{steps.get_job_id.outputs.JOB_ID}}--${{github.run_attempt}}--${{matrix.name}}--functional-test-xdc
           path: .testoutput
           include-hidden-files: true
           retention-days: 28
@@ -688,6 +722,23 @@ jobs:
           path: ~/.cache/go-build
           key: go-${{ runner.os }}${{ runner.arch }}-build-${{ env.COMMIT }}
 
+      - name: Get job ID from workflow run
+        id: get_job_id
+        run: |
+          set -eu
+          test_job_name="Functional test ndc (${{matrix.name}})"
+          job_url="https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs"
+          echo "Test job name is $test_job_name"
+          echo "Job url is $job_url"
+          job_id=$(curl -L \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+             "$job_url" \
+            | jq "first(.jobs[] | select(.name == \"$test_job_name\") | .id)")
+          echo "Job id is $job_id"
+          echo "JOB_ID=${job_id}" >> "$GITHUB_OUTPUT"
+
       - name: Run functional test ndc
         timeout-minutes: 15
         run: make functional-test-ndc-coverage
@@ -697,7 +748,7 @@ jobs:
         uses: actions/upload-artifact@v4.4.3
         if: ${{ !cancelled() }}
         with:
-          name: junit-xml--${{github.run_id}}--${{github.run_attempt}}--${{matrix.name}}--functional-test-ndc
+          name: junit-xml--${{github.run_id}}--${{steps.get_job_id.outputs.JOB_ID}}--${{github.run_attempt}}--${{matrix.name}}--functional-test-ndc
           path: .testoutput
           include-hidden-files: true
           retention-days: 28
