--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -473,7 +473,7 @@ jobs:
       - name: Get job ID from workflow run
         id: get_job_id
         run: |
-          set -euo pipefail
+          set -eu
           test_job_name="Functional test (${{matrix.runs-on}}, ${{matrix.shard_index}}, ${{matrix.name}})"
           job_url="https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs?per_page=100"
           job_id=$(curl -L \
@@ -598,7 +598,7 @@ jobs:
       - name: Get job ID from workflow run
         id: get_job_id
         run: |
-          set -euo pipefail
+          set -eu
           test_job_name="Functional test xdc (${{matrix.name}})"
           job_url="https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs?per_page=100"
           job_id=$(curl -L \
@@ -721,7 +721,7 @@ jobs:
       - name: Get job ID from workflow run
         id: get_job_id
         run: |
-          set -euo pipefail
+          set -eu
           test_job_name="Functional test ndc (${{matrix.name}})"
           job_url="https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}/jobs?per_page=100"
           job_id=$(curl -L \
