Latest UI, Grafana and Prometheus images (#6992)
## What changed?
<!-- Describe what has changed in this PR -->

Using the latest `grafana`, `temporalio/ui` and `prometheus` images for
our local dev setup.

## Why?
<!-- Tell your future self why have you made these changes -->

The current versions are 6+ months old.

## How did you test it?
<!-- How have you verified this change? Tested locally? Added a unit
test? Checked in staging env? -->

Started locally.

## Potential risks
<!-- Assuming the worst case, what can be broken when deploying this
change to production? -->

## Documentation
<!-- Have you made sure this change doesn't falsify anything currently
stated in `docs/`? If significant
new behavior is added, have you described that in `docs/`? -->

## Is hotfix candidate?
<!-- Is this PR a hotfix candidate or does it require a notification to
be sent to the broader community? (Yes/No) -->

--- a/develop/docker-compose/docker-compose.yml
+++ b/develop/docker-compose/docker-compose.yml
@@ -59,7 +59,7 @@ services:
       - temporal-dev-network
   prometheus:
     # Use http://localhost:9090/ to access Prometheus.
-    image: prom/prometheus:v2.30.0
+    image: prom/prometheus:latest
     container_name: temporal-dev-prometheus
     command:
       - "--log.level=error"
@@ -69,14 +69,14 @@ services:
       - "--web.console.templates=/usr/share/prometheus/consoles"
   grafana:
     # Use http://localhost:3000/ to access Grafana (admin/admin).
-    image: grafana/grafana:9.1.4
+    image: grafana/grafana:latest
     container_name: temporal-dev-grafana
     depends_on:
       - prometheus
     volumes:
       - ./grafana/provisioning/:/etc/grafana/provisioning/
   temporal-ui:
-    image: temporalio/ui:2.26.2
+    image: temporalio/ui:latest
     container_name: temporal-dev-ui
 
 networks:
