--- a/develop/docker-compose/docker-compose.darwin.yml
+++ b/develop/docker-compose/docker-compose.darwin.yml
@@ -18,6 +18,7 @@ services:
     ports:
       - "3200:3200" # tempo
       - "4317:4317" # otlp grpc
+      - "4318:4318" # otlp http
     networks:
       - temporal-dev-network
   temporal-ui:
