--- a/proto/internal/buf.yaml
+++ b/proto/internal/buf.yaml
@@ -14,6 +14,7 @@ breaking:
     - temporal/server/api/historyservice/v1/
     - temporal/server/api/deployment/v1/message.proto
     - temporal/server/api/matchingservice/v1/request_response.proto
+    - temporal/server/api/persistence/v1/task_queues.proto
 
 lint:
   use:
