add TemporalWorkerDeployment SA

--- a/schema/mysql/v8/visibility/versioned/v1.8/manifest.json
+++ b/schema/mysql/v8/visibility/versioned/v1.8/manifest.json
@@ -1,7 +1,7 @@
 {
   "CurrVersion": "1.8",
   "MinCompatibleVersion": "0.1",
-  "Description": "add TemporalWorkerDeploymentVersion and TemporalWorkflowVersioningBehavior columns",
+  "Description": "add TemporalWorkerDeploymentVersion, TemporalWorkerDeployment, and TemporalWorkflowVersioningBehavior columns",
   "SchemaUpdateCqlFiles": [
     "add_deployment_search_attributes.sql"
   ]
