--- a/config/dynamicconfig/development-cass.yaml
+++ b/config/dynamicconfig/development-cass.yaml
@@ -38,6 +38,8 @@ frontend.workerVersioningWorkflowAPIs:
   - value: true
 system.enableDeployments:
   - value: true
+system.enableDeploymentVersions:
+  - value: true
 system.enableNexus:
   - value: true
 component.nexusoperations.callback.endpoint.template:
